Removed delay policy from client side

--- a/policy/manager.html
+++ b/policy/manager.html
@@ -278,6 +278,10 @@
                                 </div>
                                 <div class="form-group" id="policy-history-form">
                                 </div>
+                                <div class="form-group" id="policy-delay-form">
+                                    <label for="policy-delay-form" class="control-label"><i>Pending Time (Integer Only) [h]</i></label>
+                                    <input type="text" id="policy-delay-pending" class="form-control" name="policy-delay-pending">
+                                </div>
                             </div>
                         </div>
                         <button type="submit" class="btn btn-primary">Set</button>
@@ -396,12 +400,6 @@
                             <label for="usage-transfer-form" class="col-sm-4 col-form-label"><i>Amount [Wei]</i></label>
                             <div class="col-sm-12">
                                 <input type="text" class="form-control" id="usage-transfer-form-value">
-                            </div>
-                        </div>
-                        <div class="form-group row">
-                            <label for="usage-transfer-form" class="col-sm-4 col-form-label"><i>Delay (If Apply, Integer Only) [h]</i></label>
-                            <div class="col-sm-12">
-                                <input type="text" class="form-control" id="usage-transfer-form-delay-time">
                             </div>
                         </div>
                         <button type="submit" class="btn btn-primary">Transfer</button>
